# multimodal_rag

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
app/: config.py  main.py
app/api/: admin.py  chat.py  index.py  models.py  upload.py
app/chains/: generate.py  retrieve.py
app/embeddings/: text_embedding.py
app/ingestion/: chunker.py  document_builder.py  parser.py  pipeline.py  processor.py
app/llm/: groq.py  prompt.py
app/memory/: history.py
app/retriever/: formatter.py  retriever.py
app/vectorstore/: delete.py  qdrant.py  store.py
app/vision/: caption.py
tests/: test_config.py
tests/chains/: test_rag.py
tests/embeddings/: test_text_embedding.py
tests/ingestion/: test_chunker.py  test_document_builder.py  test_parser.py  test_pipeline.py  test_processor.py
tests/llm/: test_groq.py  test_prompt.py
tests/retriever/: test_retriever.py
tests/vectorstore/: test_create_collection.py  test_qdrant.py  test_store.py
tests/vision/: test_caption.py
