[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.2",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "starlette>=0.46,<0.48",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "unstructured-inference>=1.6.13",
    "unstructured[pdf]>=0.23.1",
    "uvicorn>=0.49.0",
]
